@@ -1,19 +1,17 @@
 package cn.huang.core.service.impl;
 
-import cn.huang.core.config.InfluxDBConfigurationProperties;
+import cn.huang.core.config.InfluxWrapper;
 import cn.huang.core.result.PageResult;
 import cn.huang.core.service.IService;
 import cn.huang.core.wrapper.delete.LambdaDeleteWrapper;
 import cn.huang.core.wrapper.query.LambdaQueryWrapper;
-import com.influxdb.client.InfluxDBClient;
+import com.influxdb.client.WriteApiBlocking;
 import com.influxdb.client.domain.WritePrecision;
-import jakarta.annotation.Resource;
-import org.springframework.beans.factory.annotation.Value;
+import com.influxdb.query.FluxTable;
 
+import java.util.*;
 import java.util.logging.Logger;
 
-import java.util.List;
-import java.util.Optional;
 import java.util.concurrent.atomic.AtomicLong;
 
 /**
@@ -22,31 +20,34 @@ import java.util.concurrent.atomic.AtomicLong;
  * @date 2023/9/27 17:55:40
  */
 public abstract class ServiceImpl<T> implements IService<T> {
-    @Value("${spring.influx.log:false}")
-    private Boolean logEnable;
     private static final Logger log = Logger.getLogger(ServiceImpl.class.getName());
-    @Resource
-    private InfluxDBClient client;
-    @Resource
-    private InfluxDBConfigurationProperties properties;
+    private static InfluxWrapper influxWrapper;
+
+    public ServiceImpl(InfluxWrapper influxWrapper) {
+        if (Objects.isNull(influxWrapper))
+            throw new NullPointerException("【influx wrapper】influxWrapper is null");
+        if (Objects.isNull(influxWrapper.getClient()))
+            throw new NullPointerException("【influx wrapper】influxWrapper client is null");
+        ServiceImpl.influxWrapper = influxWrapper;
+    }
 
     @Override
     public List<T> queryList(LambdaQueryWrapper<T> lambdaQueryWrapper) {
-        lambdaQueryWrapper.FLUX.insert(0, String.format("from(bucket: \"%s\")", properties.getBucket()));
-        var tables = client.getQueryApi().query(lambdaQueryWrapper.FLUX.toString(), lambdaQueryWrapper.getEntityClass());
-        if (logEnable)
+        lambdaQueryWrapper.FLUX.insert(0, String.format("from(bucket: \"%s\")", influxWrapper.getBucket()));
+        List<T> tables = influxWrapper.getClient().getQueryApi().query(lambdaQueryWrapper.FLUX.toString(), lambdaQueryWrapper.getEntityClass());
+        if (influxWrapper.getLogEnabled())
             log.info(String.format("【influx wrapper】\n----QueryFlux：\n%s\n----QueryTables：\n%s", lambdaQueryWrapper.FLUX.toString(), tables));
         return tables;
     }
 
     @Override
     public PageResult<T> queryPage(Long current, Long size, LambdaQueryWrapper<T> lambdaQueryWrapper) {
-        var result = new PageResult<T>();
+        PageResult<T> result = new PageResult<>();
         result.setTotal(this.queryCount(lambdaQueryWrapper.copy()));
-        var offset = (current - 1) * size;
-        var records = this.queryList(lambdaQueryWrapper.copy().limit(size, offset));
-        Optional.of(records)
-                .ifPresentOrElse(recordList -> result.setRecords(records), () -> result.setRecords(null));
+        Long offset = (current - 1) * size;
+        List<T> records = this.queryList(lambdaQueryWrapper.copy().limit(size, offset));
+        if (records != null && records.size() > 0)
+            result.setRecords(records);
         result.setCurrent(current);
         result.setSize(size);
         return result;
@@ -54,46 +55,46 @@ public abstract class ServiceImpl<T> implements IService<T> {
 
     @Override
     public Long queryCount(LambdaQueryWrapper<T> lambdaQueryWrapper) {
-        lambdaQueryWrapper.FLUX.insert(0, String.format("from(bucket: \"%s\")", properties.getBucket()));
-        lambdaQueryWrapper.group(List.of("_measurement")).count();
-        var tables = client.getQueryApi().query(lambdaQueryWrapper.FLUX.toString());
-        var count = new AtomicLong();
+        lambdaQueryWrapper.FLUX.insert(0, String.format("from(bucket: \"%s\")", influxWrapper.getBucket()));
+        lambdaQueryWrapper.group(Collections.singletonList("_measurement")).count();
+        List<FluxTable> tables = influxWrapper.getClient().getQueryApi().query(lambdaQueryWrapper.FLUX.toString());
+        AtomicLong count = new AtomicLong();
         tables.forEach(table -> table.getRecords().forEach(record -> {
-            var values = record.getValues();
+            Map<String, Object> values = record.getValues();
             values.forEach((key, value) -> {
                 if (key.equals("_value"))
                     count.set(Long.parseLong(value.toString()));
             });
         }));
-        if (logEnable)
+        if (influxWrapper.getLogEnabled())
             log.info(String.format("【influx wrapper】\n----QueryFlux：\n%s\n----QueryCounts：%s", lambdaQueryWrapper.FLUX.toString(), count.get()));
         return count.get();
     }
 
     @Override
     public void insert(T entity) {
-        var blocking = client.getWriteApiBlocking();
-        blocking.writeMeasurement(properties.getBucket(), properties.getOrg(), WritePrecision.NS, entity);
-        if (logEnable)
+        WriteApiBlocking blocking = influxWrapper.getClient().getWriteApiBlocking();
+        blocking.writeMeasurement(influxWrapper.getBucket(), influxWrapper.getOrg(), WritePrecision.NS, entity);
+        if (influxWrapper.getLogEnabled())
             log.info(String.format("【influx wrapper】\n----Insert：\n%s", entity));
     }
 
     @Override
     public void insertBatch(List<T> entityList) {
-        var blocking = client.getWriteApiBlocking();
-        blocking.writeMeasurements(properties.getBucket(), properties.getOrg(), WritePrecision.NS, entityList);
-        if (logEnable)
+        WriteApiBlocking blocking = influxWrapper.getClient().getWriteApiBlocking();
+        blocking.writeMeasurements(influxWrapper.getBucket(), influxWrapper.getOrg(), WritePrecision.NS, entityList);
+        if (influxWrapper.getLogEnabled())
             log.info(String.format("【influx wrapper】\n----InsertBatch：\n%s", entityList));
     }
 
     @Override
     public void delete(LambdaDeleteWrapper<T> lambdaDeleteWrapper) {
-        client.getDeleteApi().delete(lambdaDeleteWrapper.getStart(),
+        influxWrapper.getClient().getDeleteApi().delete(lambdaDeleteWrapper.getStart(),
                 lambdaDeleteWrapper.getEnd(),
                 lambdaDeleteWrapper.FLUX.toString(),
-                properties.getBucket(),
-                properties.getOrg());
-        if (logEnable)
+                influxWrapper.getBucket(),
+                influxWrapper.getOrg());
+        if (influxWrapper.getLogEnabled())
             log.info(String.format("【influx wrapper】\n----Delete：\nstart：%s\nend：%s\nflux：%s",
                     lambdaDeleteWrapper.getStart(), lambdaDeleteWrapper.getEnd(), lambdaDeleteWrapper.FLUX.toString()));
     }
